# pea-poc-renewal-energy-forecast-platform

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  sonar-project.properties
.claude/: agents.json  settings.json  settings.local.json  skills.md
.claude/commands/: analyze-poc-data.md  demo.md  deploy-local.md  health-check.md  km-manager.md  one.md  orchestrate.md  pm-director.md  release.md  research-latest.md  review-arch.md  simulate-solar.md  simulate-voltage.md  sprint-plan.md  test-api.md  update-plan.md  validate-model.md
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  audit.py  comparison.py  data.py  dayahead.py  demand_forecast.py  demo.py  doe.py  forecast.py  health.py  history.py  imbalance_forecast.py  load_forecast.py  monitoring.py  notifications.py  regions.py  retraining.py  topology.py  weather.py
backend/app/api/v1/websocket/: __init__.py  manager.py  realtime.py
backend/app/api/v2/: __init__.py  router.py
backend/app/api/v2/endpoints/: __init__.py  health.py  version.py
backend/app/core/: cache.py  config.py  health.py  metrics.py  middleware.py  rate_limit.py  secrets.py  security.py  versioning.py
backend/app/db/: __init__.py  session.py
backend/app/ml/: __init__.py  solar_inference.py  voltage_inference.py
backend/app/models/domain/: __init__.py  region.py
backend/app/models/schemas/: audit.py  doe.py  region.py  weather.py
backend/app/services/: audit_service.py  doe_service.py  drift_detection_service.py  notification_service.py  ramp_rate_service.py  region_service.py  weather_service.py
backend/app/services/providers/: __init__.py  email_provider.py  line_provider.py
backend/tests/: conftest.py
backend/tests/load/: test_api_load.py
backend/tests/unit/: README_PHASE2A_TESTS.md  test_alerts.py  test_audit.py  test_cache.py  test_comparison.py  test_data.py  test_dayahead.py  test_demand_forecast.py  test_demo.py  test_doe.py  test_drift_detection.py  test_forecast.py  test_health.py  test_history.py  test_imbalance_forecast.py  test_load_forecast.py  test_ml_inference.py  test_monitoring.py  test_notification_service.py  test_notifications.py  test_region_service.py  test_regions.py  test_retraining.py  test_secrets.py  test_security.py  test_services.py  test_topology.py  test_weather.py  test_websocket_manager.py
docker/: Dockerfile.ml-test  docker-compose.kong.yml  docker-compose.loadtest.yml  docker-compose.ml-test.yml  docker-compose.observability.yml  docker-compose.security.yml  docker-compose.yml
docker/init-db/: 00-init-keycloak.sql  01-init.sql  02-performance-indexes.sql  03-network-model.sql
docker/keycloak/: realm-export.json
docker/kong/: kong.yml
docker/observability/alertmanager/: alertmanager.yml
docker/observability/fluentbit/: fluent-bit.conf  parsers.conf
docker/observability/prometheus/: alerts.yml  prometheus.yml
docs/: CLIENT-HANDOVER-CHECKLIST.md  DEPLOYMENT.md  RELEASE-STATUS.md  TOR-7-COMPLIANCE-REPORT.md  deployment-readiness-report.md
docs/architecture/: overview.md  rag-system.md
docs/architecture/adr/: 003-rag-implementation.md  ADR-001-database-selection.md
docs/guides/: POC-VALIDATION-GUIDE.md  demo-scenarios.md  deployment-guide.md  design-guideline.md  getting-started.md  rag-usage-guide.md
docs/knowledge-base/: graph-schema.yaml  index.yaml  taxonomy.yaml
docs/knowledge-base/domain/: glossary.yaml
docs/operations/: pre-deployment-checklist.md  secrets-management-strategy.md
docs/operations/runbooks/: deployment-runbook.md
docs/plans/: development-roadmap.md  feature-ai-chat.md  feature-help-tooltip-sidebar.md  feature-implementation-plan.md  phase-2b-doe-implementation.md  poc-progress.md  poc-qa.md  sprint-current.md  tor-7-functions-roadmap.md  v1.1.0-roadmap.md
docs/presentations/: poc-demo-script.md  poc-demo-slides.md
docs/research/: doe-implementation-research.md
docs/roadmaps/: dev-roadmap.md
docs/specs/: auth-specification.md  performance-report.md  technical-specification.md
frontend/: .dockerignore  Dockerfile  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: api-health.spec.ts  dashboard.spec.ts  mobile.spec.ts
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: index.ts  useWebSocket.ts
frontend/src/lib/: api.test.ts  api.ts  utils.test.ts  utils.ts
frontend/src/stores/: chatStore.ts  helpStore.ts
frontend/src/types/: audit.ts
infrastructure/: kind-config.yaml
infrastructure/argocd/: application-production.yaml  application-staging.yaml  project.yaml
infrastructure/helm/pea-re-forecast/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infrastructure/kubernetes/base/: configmap.yaml  namespace.yaml  secrets.yaml
infrastructure/kubernetes/databases/: redis.yaml  timescaledb.yaml
infrastructure/kubernetes/observability/: README.md  (+1 more)
ml/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
ml/models/: solar_xgb_v1.json  voltage_rf_v1.json  voltage_xgb_v1.json
ml/scripts/: extract_test_pdf_data.py  generate_demo_data.py  ingest_data.py  load_poc_data.py  test_extracted_data.py  train_solar.py  train_voltage.py  validate_poc.py
ml/src/: __init__.py  api.py
ml/src/features/: __init__.py  solar_features.py  voltage_features.py
requirements/: POC Data.xlsx  tor-7-functions.md
requirements/poc/: qa.md
requirements/sample/: POC Data 2-12-25.xlsx
scripts/: deploy-staging.sh  dev-kong.sh  run-loadtest.sh  security-scan.sh  setup-dev.sh  smoke-test.sh  start.sh  stop.sh  trivy-scan.sh
shared/types/: __init__.py  api.py
tests/load/: locustfile.py
(+131 files in other folders)
