# =============================================================================
# PEA RE Forecast Platform - Backend Configuration
# =============================================================================

[project]
name = "pea-re-forecast-backend"
version = "1.1.0"
description = "PEA Renewable Energy Forecast Platform - Backend API"
requires-python = ">=3.11"

[tool.ruff]
# Ruff configuration - replaces black, isort, flake8, and more
target-version = "py311"
line-length = 88
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "*.pyi",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults (needed for FastAPI Depends)
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "ARG001", # Unused function argument (common in FastAPI endpoints)
    "ARG002", # Unused method argument
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "S101"]  # Allow assert and unused args in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix-style line endings
line-ending = "lf"
# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --forked"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
