# =============================================================================
# PEA RE Forecast Platform - ML Configuration
# =============================================================================

[project]
name = "pea-re-forecast-ml"
version = "1.1.0"
description = "PEA Renewable Energy Forecast Platform - ML Training & Models"
requires-python = ">=3.11"

[tool.ruff]
# Ruff configuration - replaces black, isort, flake8, and more
target-version = "py311"
line-length = 88
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "notebooks",
    "*.pyi",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "S101"]
"__init__.py" = ["F401"]
"scripts/*" = ["T201"]  # Allow print statements in scripts

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
